# vba_webos

./: .gitignore  Makefile  Makefile.in  README  aclocal.m4  appinfo.json  index.html  sources.json  vba-over.ini
app/assistants/: app-assistant.js
binaries/armv7/: vba
cat_beta/: appinfo.json  package.properties
control/: postinst  prerm
pkg/: Makefile
pkg/pkg_base/: README  appinfo.json  index.html  vba  vba-over.ini
skins/: skins.tar
skins/zsoc_1/: controller.cfg~
src/: GBA.cpp  Makefile.in  aclocal.m4  autogen.sh  config.sh  configure  configure.in  pdk.rc  sdl-config
src/debian/: VisualBoyAdvance-32x32.xpm  VisualBoyAdvance.desktop  changelog  control  copyright  gvba.1  rules  visualboyadvance-gtk.manpages  visualboyadvance-gtk.menu  visualboyadvance.links  visualboyadvance.manpages  watch
src/gb/: Makefile.in
src/m4/: Makefile.in
src/po/: fr.gmo  fr.po
src/prof/: Makefile.in
src/sdl/: Makefile.am  SDL.cpp  esFunc.h
src/src/: GBA.cpp  GBA.h  GBAGfx.h  GBAinline.h  Gfx.cpp  Gfx.h  Globals.cpp  Globals.h  Makefile.in  Mode0.cpp  Mode1.cpp  Mode2.cpp  Mode3.cpp  Mode4.cpp  Mode5.cpp  Sound.cpp  Sound.h  System.h  Text.cpp  Util.cpp  arm-new-pre.h  arm-new.h  bios.cpp  convertColor.h  thumb-pre.h  thumb.h
src/src/sdl/: Controller.cpp  Controller.h  Event.cpp  Event.h  GLUtil.cpp  HelpText.h  Makefile.am  Makefile.in  OptionMenu.cpp  OptionMenu.h  Options.cpp  RomSelector.cpp  SDL.cpp  TestEmu.cpp  VBA.h  controller.h  controller.xcf  debugger.cpp  options.h  pdl.h
src/src/sdl/src/: Makefile.am  Makefile.in
src/win32/: Makefile.in
upstart/: org.webosinternals.visualboyadvance
(+45 files in other folders)
